Bug 202701 - Incorrect hinting on combobox widgets
Summary: Incorrect hinting on combobox widgets
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
: 202720 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-08-05 22:16 UTC by Alexey Chernov
Modified: 2009-08-06 21:05 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Hinting problem (8.45 KB, image/png)
2009-08-05 22:17 UTC, Alexey Chernov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alexey Chernov 2009-08-05 22:16:58 UTC
Version:            (using KDE 4.3.0)
Compiler:          GCC 4.3.2 Target: x86_64-unknown-linux-gnu Configured with:  ../gcc-4.3.2/configure --prefix=/usr --libexecdir=/usr/lib --enable-shared --enable-threads=posix --enable-__cxa_atexit --enable-clocale=gnu --enable-languages=c,c++,fortran,objc,treelang --disable-multilib --enable-c99 --enable-long-long Thread model: posix
OS:                Linux
Installed from:    Compiled From Sources

It seems that font hinting on combobox widgets is incorrect while everywhere else it's ok (screenshot is to be attached). I think it's the problem with RGB pixel order which seems to be different for comboboxes than system settings.
Comment 1 Alexey Chernov 2009-08-05 22:17:38 UTC
Created attachment 35881 [details]
Hinting problem
Comment 2 Alexey Chernov 2009-08-05 22:19:39 UTC
Also, it's unlikely to be Qt (4.5.2) or X problem, because previously KDE 4.2.4 worked ok on the same builds.
Comment 3 Christoph Feck 2009-08-06 01:12:53 UTC
It looks like the text is rendered twice. I see this on my system also, but I blamed current Qt trunk (4.6). Thanks for confirming that the problem is in KDE.
Comment 4 Dario Andres 2009-08-06 04:43:06 UTC
*** Bug 202720 has been marked as a duplicate of this bug. ***
Comment 5 Christoph Feck 2009-08-06 21:02:21 UTC
SVN commit 1008049 by cfeck:

Do not draw twice

Logic for switch statement changed with r970791

BUG: 202701


 M  +2 -0      oxygen.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1008049
Comment 6 Christoph Feck 2009-08-06 21:04:11 UTC
SVN commit 1008050 by cfeck:

Do not draw twice (backport r1008049)

CCBUG: 202701


 M  +2 -0      oxygen.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1008050
Comment 7 Alexey Chernov 2009-08-06 21:05:52 UTC
Thank you very much, Christoph! Really fast patch