Do not draw twice

Logic for switch statement changed with r970791

BUG: 202701

svn path=/trunk/KDE/kdebase/runtime/kstyles/; revision=1008049